package com.example.projetseg2505;

public interface ItemExistenceCallback {
    void onResult(boolean exists, Integer quantity);
}
